# tdl-watch

./: .deploy.sh  .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  scrapy.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  issue_with_user_story.md  page_implentation.md
.github/workflows/: ci.yml  cron.yml
tdl_scrapers/: constants.py  items.py
tdl_scrapers/commands/: update_airtable.py
tdl_scrapers/settings/: base.py  prod.py
tdl_scrapers/spiders/: chicago_legistar.py
tests/: test_chicago_legistar.py
tests/files/: chicago_legistar.json
