[tool.poetry]
name = "tdl-watch"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.6.1,<4.0"
scrapy = "^2.5"
attrs = "^21.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^4.0"
isort = "^5.10"
black = "19.10b0"

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
/(
    \.git
  | \.pytest_cache
  | \.venv
  | __pycache__
  | build
  | coverage
  | tests/files
)/
'''

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.isort]
default_section = "THIRDPARTY"
known_first_party = ["tdl_scrapers"]
skip_glob = [
    "*/.venv/*",
    "*/tests/files/*",
]
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
